dataset1235/2025-2/2868285114/users/1182455195/executions/3649835072_1078076002.log
== SUBMISSION (2025-08-21 12:06:07)
-- CODE: 
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:03:08)
-- CODE: 
x1 = Ufam
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = Ufam
         ^^^^
NameError: name 'Ufam' is not defined
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = Ufam
         ^^^^
NameError: name 'Ufam' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 12:02:55)
-- CODE: 
x1 = Ufam
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = Ufam
         ^^^^
NameError: name 'Ufam' is not defined
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = Ufam
         ^^^^
NameError: name 'Ufam' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:05:39)
-- CODE: 
x1 = "Ufam"
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:06:05)
-- CODE: 
x1 = 1.23
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:03:07)
-- CODE: 
x1 = Ufam
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = Ufam
         ^^^^
NameError: name 'Ufam' is not defined
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x1 = Ufam
         ^^^^
NameError: name 'Ufam' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
